# Robot

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  DEPLOY.md  LICENSE  README.md  docker-compose.yml  fly.toml  sess_messages.json
api/: .env.example  .gitignore  Dockerfile  pyproject.toml
api/app/: config.py  deps.py  logging_security.py  main.py  models.py
api/app/routers/: calls.py  calls_active.py  carriers.py  dashboard.py  dashboard_view.py  events.py  health.py  loads.py  telemetry.py  transcript_timeline.py
api/app/services/: bookings_store.py  calls_store.py  dashboard_aggregations.py  event_bus.py  load_store.py  token_counting.py  transcript_aggregations.py  transcript_parser.py  twin_client.py
api/tests/: conftest.py  test_auth.py  test_bookings_store.py  test_calls_deprecated.py  test_calls_endpoints.py  test_carriers_endpoints.py  test_dashboard_aggregations.py  test_dashboard_caching.py  test_dashboard_endpoints.py  test_events.py  test_fmcsa_eligibility.py  test_health.py  test_loads.py  test_mc_normalization.py  test_recent_bookings_n1.py  test_security.py  test_transcript_timeline.py  test_twin_client.py
api/tests/fixtures/: fmcsa_eligible_mc1234567.json  fmcsa_inactive_mc2986.json  fmcsa_not_found.json
dashboard/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  branding-preview.html  fly.toml  library-cut-comparison.html  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
data/: calls_log.sql  calls_log_review_2026-04-27.json  calls_log_review_2026-04-27.ndjson  calls_log_review_2026-04-30.md  calls_log_review_2026-04-30.ndjson  dummy_seed_batch_1.sql  dummy_seed_batch_2.sql  dummy_seed_batch_3.sql  load-policies.json  loads.csv  loads.json  twin_schema_calls_log.sql  twin_schema_loads.sql  twin_schema_v15_bookings.sql  twin_schema_v15_calls_log_cleanup.sql  twin_seed_loads.sql  twin_seed_loads_v2.sql
docs/: FDE-TECHNICAL-CHALLENGE.md  activity-log.md  agent-logic-tree.md  broker-doc.md  cleanup-plan.md  dashboard-chart-review.md  dashboard-design-philosophy.md  dashboard-final-prod-register.md  dashboard-metric-catalog.md  email-to-carlos.md  execution-plan-2026-04-29.md  (+18 more)
(+289 files in other folders)
