[project]
name = "robot-api"
version = "0.0.1"
description = "Inbound carrier voice-agent backend (HappyRobot integration)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "structlog>=24.4",
    "python-json-logger>=2.0",
    "filelock>=3.16",
    "cachetools>=5.5",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
telemetry = [
    # Optional: tiktoken o200k_base for accurate per-turn token estimates in
    # transcript_telemetry. Service falls back to char-count if missing.
    "tiktoken>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["B008"]  # FastAPI uses Depends(...) / Header(default=...) in defaults — intentional

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
